<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cerberus</string>
    <string name="action_settings">Settings</string>
    
    <string name="desc_splash">This is a loading screen</string>
    <string name="powered_content"></string>
    
    <string name="preference_file_key">br.itabits.cerberus.somedata</string>
    <string name="saved_borrow_state">borrow_state</string>
    
   
    <!-- General strings -->
    <string name="name"> name:  </string>
    <string name="date"> date:  </string>
    <string name="time"> time:  </string>
    
    <!-- Strings related to menu -->
    <string name="greetings_title">Hello <i>username</i></string>
    <string name="borrow_button">Borrow now</string>
    <string name="return_button">Return now</string>
    <string name="view_past_button">Past borrows</string>
    <string name="quit_button">Exit</string>
    
    <!-- Strings related to borrow/return -->
    <string name="title_activity_borrow_return">Confirmation</string>
    <string name="borrow_return_title">Borrowed</string>
    <string name="borrow_return_name">name: user</string>
    <string name="borrow_return_date">date: ---</string>
    <string name="borrow_return_time">time: ---</string>
    <string name="borrow_return_ok_button">OK</string>
    
    <!-- Strings related to borrow table -->
    <string name="past_borrows_title">Past Borrowings</string>
    <string name="past_back_button">back</string>
    <string name="head_borrow_title"><b>borrowed</b></string>
    <string name="head_name_title"><b>name</b></string>
    <string name="head_return_title"><b>returned</b></string>
    <string name="title_activity_loan_table">View Past</string>
    <string name="blank_desc_table">---</string>
    <string name="fetching_data_table">fetching data&#8230;</string>

</resources>
