<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".BorrowTableActivity" >

    <!-- Login progress -->

    <LinearLayout
        android:id="@+id/borrow_table_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/table_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/fetching_data_table"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <!-- Borrow Table -->

    <HorizontalScrollView
        android:id="@+id/borrow_table_wrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:measureAllChildren="true" >

        <LinearLayout
            android:id="@+id/borrow_table_container"
            android:layout_width="800dp"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/past_borrows_title"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:layout_width="800dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="5dp"
                    android:text="@string/head_borrow_title"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="5dp"
                    android:text="@string/head_name_title"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="5dp"
                    android:text="@string/head_return_title"
                    android:textAppearance="?android:attr/textAppearanceMedium" />
            </LinearLayout>

            <TableRow
                android:layout_width="800dp"
                android:layout_height="1dp"
                android:background="#BDBDBD" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:text="" />
            </TableRow>

            <ScrollView
                android:layout_width="800dp"
                android:layout_height="fill_parent" >

                <TableLayout
                    android:id="@+id/borrow_table"
                    android:layout_width="800dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top"
                    android:layout_marginTop="0dp" >

                    <TableRow
                        android:id="@+id/tableRow1"
                        android:layout_width="800dp"
                        android:layout_height="wrap_content" >
                    </TableRow>
                </TableLayout>
            </ScrollView>
        </LinearLayout>
    </HorizontalScrollView>

</merge>